--- a/index.html
+++ b/index.html
@@ -1,49 +1,51 @@
 <!doctype html>
 <html lang="en">
 
-<head>
-  <meta charset="utf-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Cosmic Quiz Adventure</title>
-  <link rel="stylesheet" href="css/style.css">
-  <link href="https://fonts.googleapis.com/css2?family=Orbitron:wght@400;700&family=Roboto:wght@300;400;700&display=swap" rel="stylesheet">
-</head>
+  <head>
+    <meta charset="utf-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Cosmic Quiz Adventure</title>
+    <link rel="stylesheet" href="css/style.css">
+    <link
+      href="https://fonts.googleapis.com/css2?family=Orbitron:wght@400;700&family=Roboto:wght@300;400;700&display=swap"
+      rel="stylesheet">
+  </head>
 
-<body>
+  <body>
 
-<div class="stars"></div>
-<div class="twinkling"></div>
+    <div class="stars"></div>
+    <div class="twinkling"></div>
 
-<div class="container">
-  <div id="landing-page">
-    <h1>Cosmic Quiz Adventure</h1>
-    <p>Embark on a journey through the universe of knowledge!</p>
-    <button id="start-btn">Start Your Adventure</button>
-  </div>
+    <div class="container">
+      <div id="landing-page">
+        <h1>Cosmic Quiz Adventure</h1>
+        <p>Embark on a journey through the universe of knowledge!</p>
+        <button id="start-btn">Start Your Adventure</button>
+      </div>
 
-  <div id="quiz-container" style="display: none;">
-    <h2 id="question"></h2>
-    <div id="choices"></div>
-    <button id="submit-btn">Submit</button>
-    <div id="result"></div>
-    <div id="progress-container">
-      <div id="progress-bar"></div>
+      <div id="quiz-container" style="display: none;">
+        <h2 id="question"></h2>
+        <div id="choices"></div>
+        <button id="submit-btn">Submit</button>
+        <div id="result"></div>
+        <div id="progress-container">
+          <div id="progress-bar"></div>
+        </div>
+        <div id="score-container">
+          <p>Score: <span id="score">0</span></p>
+          <p>Time Left: <span id="timer">15</span> seconds</p>
+        </div>
+      </div>
+
+      <div id="final-score" style="display: none;">
+        <h2>Mission Completed!</h2>
+        <p>Your final score: <span id="final-score-value"></span></p>
+        <button id="restart-btn">Embark Again</button>
+      </div>
     </div>
-    <div id="score-container">
-      <p>Score: <span id="score">0</span></p>
-      <p>Time Left: <span id="timer">15</span> seconds</p>
-    </div>
-  </div>
 
-  <div id="final-score" style="display: none;">
-    <h2>Mission Completed!</h2>
-    <p>Your final score: <span id="final-score-value"></span></p>
-    <button id="restart-btn">Embark Again</button>
-  </div>
-</div>
+    <script src="js/app.js"></script>
 
-<script src="js/app.js"></script>
-
-</body>
+  </body>
 
 </html>
